visible bug report

--- a/main.css
+++ b/main.css
@@ -27,13 +27,16 @@ canvas {
     left: 0;
     top: 0;
     margin: 3px;
-    color: black;
+    color: #f00;
+    font-family: monospace;
+    background: black;
 }
 
-.helper{
+#helper{
     position: absolute;
     right: 0;
     top: 0;
     margin: 3px;
-    color: black;
+    color: #f00;
+    background: black;
 }
